修正一些代码